fix spacing
spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ body {
 
 .jk-tab-line-break {
   display: block;
+  content: " ";   
 }
 
 #jk-names-row {
